Fix for contrast

--- a/blue/materialcraft_blue.css
+++ b/blue/materialcraft_blue.css
@@ -714,7 +714,6 @@ input[type="checkbox"]:disabled:checked:after,
   background: #fff;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
   border: 0px solid transparent;
-  border-radius: 2px;
 }
 .panel .panel-heading {
   color: #ffffff;
@@ -722,6 +721,8 @@ input[type="checkbox"]:disabled:checked:after,
   background-color: #2196f3;
   font-weight: 500 !important;
   border: 0;
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
 }
 /* Navbar */
 .navbar-default {
@@ -731,6 +732,7 @@ input[type="checkbox"]:disabled:checked:after,
   -webkit-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.24);
   -moz-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.24);
   box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.24);
+  border: 0px transparent;
 }
 .navbar-default .navbar-brand,
 .navbar-default .navbar-brand:hover {
