--- a/less/modules/navbar.less
+++ b/less/modules/navbar.less
@@ -6,6 +6,7 @@
 	-webkit-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.24);
 	-moz-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.24);
 	box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.24);
+  border: 0px transparent;
 }
 .navbar-default .navbar-brand,
 .navbar-default .navbar-brand:hover {
